<resources>
    <string name="app_name">Tp2ChristianLima</string>
    <string name="Titre">Authentication system</string>
    <string name="connexion">Connection</string>
    <string name="inscription">Registration</string>
    <string name="enregistrer">Register</string>
    <string name="nomComplet">Enter your full name</string>
    <string name="courriel">Enter your email</string>
    <string name="mdp">Enter your password</string>
    <string name="validationMdp">Password validation</string>
    <string name="Deconnexion">Disconnect</string>
    <string name="profile">Profile management</string>
    <string name="AjouterFilm">Add a movie</string>
    <string name="AfficherlisteFilms">See all the movies</string>
    <string name="TitreModif">Edit your information:</string>
    <string name="ModifNom">Change your name</string>
    <string name="ModifCourriel">Change your email</string>
    <string name="ModifTel">Change your phone number</string>
    <string name="ModifSexe">Change your gender</string>
    <string name="ModifLangue">Change your language</string>
    <string name="AjoutNom">Add your full name</string>
    <string name="AjoutTel">Add your phone number</string>
    <string name="AjoutSexe">Add your gender</string>
    <string name="AjoutLangue">Add your language</string>
    <string name="Sauvegarder">Save</string>
    <string name="titreAjoutFilm">Welcome, add a movie</string>
    <string name="AjoutTitre">Add the title</string>
    <string name="AjoutActeurPrincipal">Add the main actor</string>
    <string name="AjoutGenre">Add the genre</string>
    <string name="AjoutDateSortie">Add the release date</string>
    <string name="Retourner">Go back</string>
    <string name="ListeFilm">Here is the list of films</string>
    <string name="MiseAJour">Update</string>
    <string name="ModifInfoFilm">Edit movie informations:</string>
    <string name="ModifTitreFilm">Change the title</string>
    <string name="ModifActeurFilm">Change the main actor</string>
    <string name="ModifGenreFilm">Change the gender</string>
    <string name="ModifDateFilm">Change the release date</string>
    <string name="Supprimer">Delete</string>
    <string name="inscriptionReussite">User created, now log in to your account</string>
    <string name="inscriptionErreur">Authentication error, it\'s possible that an account has the same email!</string>
    <string name="longeurMdp">Password must contain 10 characters or more</string>
    <string name="validationMdpErreur">Passwords are different</string>
    <string name="courrielErreur">Please enter a valid email</string>
    <string name="nomCompletErreur">Please enter your full name</string>
    <string name="ErreurConnection">Connection error, password or email is invalid</string>
    <string name="connecter">You are connected</string>
    <string name="nomProfil">Your name</string>
    <string name="courrielProfil">Your email</string>
    <string name="modifProfilReussi">Updated</string>
    <string name="modifProfilErreur">Failed to save update</string>
    <string name="courrielProfilModifErreur">If you want to change your email, then please enter a valid email</string>
    <string name="envoieCourrielValidation">A verification email has been sent to</string>
    <string name="courrielValidationReussi">After accepting, log in again to your new email!</string>
    <string name="EchecModifCourriel">Failed to edit email</string>
    <string name="utilisateurNonTrouverProfil">The user was not found.</string>
    <string name="filmAjout">The movie has been added, add another movie if desired!</string>
    <string name="dateFilmErreur">Please enter the movie release date</string>
    <string name="genreFilmErreur">Please enter the genre of the movie</string>
    <string name="acteurFilmErreur">Please enter the main actor of the movie</string>
    <string name="titreFilmErreur">Please enter a movie title</string>
    <string name="InfoFilmTitre">Information about the movie:</string>
    <string name="InfoFilmActeur">Main actor:</string>
    <string name="InfoGenreFilm">The genre of the movie:</string>
    <string name="InfoDateFilm">The release date of the movie:</string>
    <string name="modificationReussi">The movie has been edited</string>
    <string name="modificationEchec">Failed to edit movie</string>
    <string name="confirmationSuppriemr">Are you sure you want to delete this movie?</string>
    <string name="FilmSupprimerReussi">The movie has been deleted</string>
    <string name="FilmSupprimerEchec">Error deleting the movie</string>
    <string name="modifFilmTitre">Edit or delete this movie:</string>
    <string name="titreFilm">Title:</string>
    <string name="acteurFilm">Main actor:</string>
    <string name="genreFilm">Genre:</string>
    <string name="dateFilm">Release date:</string>
    <string name="Oui">Yes</string>
    <string name="Non">No</string>
    <string name="modificationInfoTitre">Here are the informations:</string>
    <string name="supprimerFilm">The film has been deleted</string>
    <string name="supprimerFilmErreur">Error deleting movie</string>
</resources>