<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activity_AjoutFilm">

    <TextView
        android:id="@+id/tv_titreAjoutFilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titreAjoutFilm"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_ajoutTitreFilm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        android:hint="@string/AjouterFilm"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_ajoutTitreFilm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
            android:inputType="textCapWords|textFilter"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_ajoutActueurPrincipalFilm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        android:hint="@string/AjoutActeurPrincipal"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_ajoutActueurPrincipalFilm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:inputType="textCapWords|textFilter"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_ajoutGenreFilm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        android:hint="@string/AjoutGenre"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_ajoutGenreFilm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:inputType="textCapWords|textFilter"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_ajoutDateSortieFilm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        android:hint="@string/AjoutDateSortie"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_ajoutDateSortieFilm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="none"
            android:focusable="false"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_SauvegarderFilmBd"
        android:layout_width="187dp"
        android:layout_height="56dp"
        android:background="@color/grey"
        android:backgroundTint="@color/grey"
        android:onClick="onClickSauvegarder"
        android:text="@string/Sauvegarder"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847" />

    <Button
        android:id="@+id/btn_revenirAutrePage"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:background="@color/grey"
        android:backgroundTint="@color/grey"
        android:text="@string/Retourner"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />
</androidx.constraintlayout.widget.ConstraintLayout>