<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:scrollbarThumbHorizontal="@color/white"
    android:scrollbarThumbVertical="@color/white"
    tools:context=".Activity_listeFilm">

    <TextView
        android:id="@+id/tv_titreListeFilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ListeFilm"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <FrameLayout
        android:id="@+id/fr_listeFilm"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fr_filmChoisi"
        android:layout_width="0dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

    </FrameLayout>

    <Button
        android:id="@+id/btn_miseAJour"
        android:layout_width="182dp"
        android:layout_height="66dp"
        android:background="@color/grey"
        android:onClick="onClick_misAJourfilm"
        android:text="@string/MiseAJour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817" />

    <Button
        android:id="@+id/btn_retourner"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:background="@color/grey"
        android:onClick="onClick_retour"
        android:text="@string/Retourner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.968" />

</androidx.constraintlayout.widget.ConstraintLayout>